--- a/esda/sizeshape.ipynb
+++ b/esda/sizeshape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "liked-giving",
+   "id": "political-invention",
    "metadata": {},
    "source": [
     "# Size and shape of signatures\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "wooden-salvation",
+   "id": "stuffed-romania",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "swedish-avatar",
+   "id": "mature-worry",
    "metadata": {},
    "source": [
     "## Measure size and shape characters"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ongoing-bolivia",
+   "id": "attended-insight",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "pressing-helmet",
+   "id": "bigger-postcard",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "revised-somerset",
+   "id": "parallel-variety",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "parliamentary-mouse",
+   "id": "nominated-dallas",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "pediatric-sword",
+   "id": "accredited-melissa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "transsexual-bibliography",
+   "id": "improved-cedar",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "jewish-capitol",
+   "id": "earlier-underground",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "immediate-article",
+   "id": "satisfied-attachment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fluid-methodology",
+   "id": "peaceful-example",
    "metadata": {},
    "source": [
     "## Exploration of results"
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "spiritual-revolution",
+   "id": "psychological-company",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "nutritional-guinea",
+   "id": "valid-cricket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "signal-fighter",
+   "id": "featured-harrison",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "weird-apollo",
+   "id": "presidential-strength",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "spare-boating",
+   "id": "answering-hampton",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "velvet-combination",
+   "id": "considerable-copyright",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "capital-brazilian",
+   "id": "dependent-raising",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bound-booth",
+   "id": "mineral-romantic",
    "metadata": {},
    "source": [
     "### Area"
@@ -1210,7 +1210,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "fewer-project",
+   "id": "lesbian-surname",
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "communist-movement",
+   "id": "minimal-gardening",
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "corporate-portugal",
+   "id": "unnecessary-aurora",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amazing-civilization",
+   "id": "korean-environment",
    "metadata": {},
    "source": [
     "### Perimeter"
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "clean-inquiry",
+   "id": "physical-respect",
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "treated-lodging",
+   "id": "coordinated-ideal",
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1399,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "labeled-construction",
+   "id": "powerful-permit",
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floppy-consultation",
+   "id": "painted-retreat",
    "metadata": {},
    "source": [
     "### ERI"
@@ -1434,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "durable-conflict",
+   "id": "satellite-unknown",
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1484,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "worse-sucking",
+   "id": "chubby-python",
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capable-memory",
+   "id": "beneficial-matrix",
    "metadata": {},
    "source": [
     "### Circlular compactness"
@@ -1518,7 +1518,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "treated-anatomy",
+   "id": "accessory-nowhere",
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "dynamic-suspension",
+   "id": "partial-cylinder",
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "encouraging-population",
+   "id": "impressed-wednesday",
    "metadata": {},
    "source": [
     "### Donut index"
@@ -1602,7 +1602,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "incident-favor",
+   "id": "joint-footage",
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1652,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "curious-ethics",
+   "id": "iraqi-manitoba",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mobile-language",
+   "id": "received-demand",
    "metadata": {},
    "source": [
     "### Fractality"
@@ -1686,7 +1686,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "optional-forwarding",
+   "id": "strong-fleece",
    "metadata": {},
    "outputs": [
     {
@@ -1736,7 +1736,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "latin-sheriff",
+   "id": "likely-gathering",
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latin-female",
+   "id": "moral-buffer",
    "metadata": {},
    "source": [
     "### Convexity"
@@ -1770,7 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "mathematical-virginia",
+   "id": "encouraging-raise",
    "metadata": {},
    "outputs": [
     {
@@ -1820,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "hired-casting",
+   "id": "rental-domain",
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dutch-worthy",
+   "id": "boring-edmonton",
    "metadata": {},
    "source": [
     "## Using only 50% largest signatures per each type\n",
@@ -1856,7 +1856,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "stone-sailing",
+   "id": "requested-champion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1872,7 +1872,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "included-hampshire",
+   "id": "empty-imperial",
    "metadata": {},
    "outputs": [
     {
@@ -1893,7 +1893,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "imperial-riverside",
+   "id": "revised-sierra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1903,7 +1903,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fitted-mystery",
+   "id": "turned-notion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1912,7 +1912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excessive-progressive",
+   "id": "german-notice",
    "metadata": {},
    "source": [
     "### Area"
@@ -1921,7 +1921,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "absent-negative",
+   "id": "placed-victoria",
    "metadata": {},
    "outputs": [
     {
@@ -1972,7 +1972,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "cosmetic-characteristic",
+   "id": "close-detail",
    "metadata": {},
    "outputs": [
     {
@@ -1998,7 +1998,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "unable-advertiser",
+   "id": "polish-apparatus",
    "metadata": {},
    "outputs": [
     {
@@ -2024,7 +2024,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imperial-union",
+   "id": "light-bronze",
    "metadata": {},
    "source": [
     "### Perimeter"
@@ -2033,7 +2033,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "bulgarian-actress",
+   "id": "aware-peter",
    "metadata": {},
    "outputs": [
     {
@@ -2084,7 +2084,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "premier-thumbnail",
+   "id": "still-nutrition",
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2110,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "spanish-encoding",
+   "id": "disciplinary-competition",
    "metadata": {},
    "outputs": [
     {
@@ -2136,7 +2136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rough-generation",
+   "id": "defined-sheet",
    "metadata": {},
    "source": [
     "### ERI"
@@ -2145,7 +2145,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "royal-personal",
+   "id": "irish-charger",
    "metadata": {},
    "outputs": [
     {
@@ -2195,7 +2195,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "stainless-fluid",
+   "id": "greek-latin",
    "metadata": {},
    "outputs": [
     {
@@ -2220,7 +2220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "centered-behavior",
+   "id": "interracial-dutch",
    "metadata": {},
    "source": [
     "### Circlular compactness"
@@ -2229,7 +2229,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "temporal-canadian",
+   "id": "rural-bacteria",
    "metadata": {},
    "outputs": [
     {
@@ -2279,7 +2279,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "black-carter",
+   "id": "worldwide-filename",
    "metadata": {},
    "outputs": [
     {
@@ -2304,7 +2304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "qualified-booth",
+   "id": "working-noise",
    "metadata": {},
    "source": [
     "### Donut index"
@@ -2313,7 +2313,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "polar-doctrine",
+   "id": "opening-april",
    "metadata": {},
    "outputs": [
     {
@@ -2363,7 +2363,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "strategic-batch",
+   "id": "heavy-experiment",
    "metadata": {},
    "outputs": [
     {
@@ -2388,7 +2388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "several-image",
+   "id": "advised-digest",
    "metadata": {},
    "source": [
     "### Fractality"
@@ -2397,7 +2397,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "noted-dayton",
+   "id": "horizontal-checkout",
    "metadata": {},
    "outputs": [
     {
@@ -2447,7 +2447,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "coordinated-discovery",
+   "id": "civic-output",
    "metadata": {},
    "outputs": [
     {
@@ -2472,7 +2472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "preliminary-progress",
+   "id": "great-beijing",
    "metadata": {},
    "source": [
     "### Convexity"
@@ -2481,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "outstanding-suggestion",
+   "id": "elder-level",
    "metadata": {},
    "outputs": [
     {
@@ -2531,7 +2531,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "negative-bulgaria",
+   "id": "roman-multimedia",
    "metadata": {},
    "outputs": [
     {
@@ -2555,9 +2555,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "swiss-envelope",
+   "metadata": {},
+   "source": [
+    "## Notes\n",
+    "\n",
+    "### Area\n",
+    "\n",
+    "*Wild countryside*, *Countryside agriculture* and *Urban buffer* much larger than the rest. The difference between more urban signatures is small, with an exception of *Warehouse/Park land* that tends to be a bit larger and *Disconnected suburbia* that tends to be smaller.\n",
+    "\n",
+    "### Perimeter\n",
+    "\n",
+    "Very similar as area, we could almost say the same.\n",
+    "\n",
+    "### Equivalent rectangular index\n",
+    "\n",
+    "*(higher the value is, less complex the shape is)*\n",
+    "\n",
+    "There's an intereseting tendency shown - more urban signatures tend to be less complex in shape than rural ones and there is almost a gradient of increasing complexity as we lose urbanity. In other words, more urban singatures have much simpler shapes.\n",
+    "\n",
+    "However, this clear tendency is lost when we take into account only 50% largest polygons.\n",
+    "\n",
+    "### Circular compactness\n",
+    "\n",
+    "*(higher value means more compact, circle-like shape)*\n",
+    "\n",
+    "Nothing super interesting comes up. Countryside tends to have less compact shapes but the rest doesn't tell much.\n",
+    "\n",
+    "### Donut index\n",
+    "\n",
+    "*(higher values means more holes)*\n",
+    "\n",
+    "This is interesting. We have two groups of signatures showing donut-like tendency. \n",
+    "\n",
+    "- Countryside right next to the city - *urban buffer* and *open sprawl* have a tendency to encircle more urban development\n",
+    "- Dense central areas - *dense urban neighbourhoods* and the *urbanity* singatures tend to form concentric rings, therefore having a donut shape.\n",
+    "\n",
+    "### Fractality\n",
+    "\n",
+    "*(higher means more fractal-like)*\n",
+    "\n",
+    "There is some variation, especially looking only at top 50% but I am not sure if there is any specific tendency apart from a relative randomness.\n",
+    "\n",
+    "### Convexity\n",
+    "\n",
+    "*(1 means convex, 0 complex)*\n",
+    "\n",
+    "Again, not sure if it shows anything meaningful."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "streaming-disorder",
+   "id": "generous-weapon",
    "metadata": {},
    "outputs": [],
    "source": []
