--- a/data_product/overview.ipynb
+++ b/data_product/overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "subject-hudson",
+   "id": "painted-discipline",
    "metadata": {},
    "source": [
     "# Overview of the data product\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "instant-angle",
+   "id": "intelligent-present",
    "metadata": {},
    "outputs": [
     {
@@ -30,18 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "western-upgrade",
+   "execution_count": 3,
+   "id": "supposed-diameter",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import pandas\n",
     "import geopandas"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "olympic-information",
+   "id": "played-heaven",
    "metadata": {},
    "source": [
     "## Geometry\n",
@@ -52,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "multiple-colombia",
+   "id": "alpha-taxation",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "computational-causing",
+   "id": "reflected-retrieval",
    "metadata": {},
    "source": [
     "## Geometry description\n",
@@ -213,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "regular-numbers",
+   "id": "mineral-dealer",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hired-leadership",
+   "id": "vulnerable-gathering",
    "metadata": {},
    "source": [
     "## Signature type description\n",
@@ -634,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "southern-invite",
+   "id": "imported-appliance",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stupid-saying",
+   "id": "yellow-rover",
    "metadata": {},
    "source": [
     "## Keys\n",
@@ -1205,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dress-surgery",
+   "id": "defensive-costa",
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proprietary-shakespeare",
+   "id": "recognized-destruction",
    "metadata": {},
    "source": [
     "Key linking signature type and type code."
@@ -1331,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "valid-turkish",
+   "id": "pressing-violation",
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "healthy-badge",
+   "id": "automatic-cruise",
    "metadata": {},
    "source": [
     "## LSOA interpolation\n",
@@ -1492,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "balanced-trinidad",
+   "id": "arranged-ordering",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ordered-choir",
+   "id": "difficult-bailey",
    "metadata": {},
    "source": [
     "## OA interpolation\n",
@@ -1832,7 +1833,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "comparative-overview",
+   "id": "surface-pontiac",
    "metadata": {},
    "outputs": [
     {
@@ -2146,6 +2147,63 @@
    ],
    "source": [
     "pandas.read_csv(\"output_area_estimates.csv\", nrows=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faced-arizona",
+   "metadata": {},
+   "source": [
+    "## Pen portraits\n",
+    "\n",
+    "Short description of each signature type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "divine-replication",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"pen_portraits.json\", \"r\") as f:\n",
+    "    portraits = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "solid-parent",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Wild countryside': 'In “Wild countryside”, human influence is the least intensive. This signature covers large open spaces in the countryside where no urbanisation happens apart from occasional roads, cottages, and pastures. You can find it across the Scottish Highlands, numerous national parks such as Lake District, or in the majority of Wales.',\n",
+       " 'Countryside agriculture': '“Countryside agriculture” features much of the English countryside and displays a high degree of agriculture including both fields and pastures. There are a few buildings scattered across the area but, for the most part, it is green space.',\n",
+       " 'Urban buffer': '“Urban buffer” can be characterised as a green belt around cities. This signature includes mostly agricultural land in the immediate adjacency of towns and cities, often including edge development. It still feels more like countryside than urban, but these signatures are much smaller compared to other countryside types.',\n",
+       " 'Open sprawl': '“Open sprawl” represents the transition between countryside and urbanised land. It is located in the outskirts of cities or around smaller towns and is typically made up of large open space areas intertwined with different kinds of human development, from highways to smaller neighbourhoods.',\n",
+       " 'Disconnected suburbia': '“Disconnected suburbia” includes residential developments in the outskirts of cities or even towns and villages with convoluted, disconnected street networks, low built-up and population densities, and lack of jobs and services. This signature type is entirely car-dependent.',\n",
+       " 'Accessible suburbia': '“Accessible suburbia” covers residential development on the urban periphery with a relatively legible and connected street network, albeit less so than other more urban signature types. Areas in this signature feature low density, both in terms of population and built-up area, lack of jobs and services. For these reasons, “accessible suburbia” largely acts as dormitories.',\n",
+       " 'Warehouse/Park land': '“Warehouse/Park land” covers predominantly industrial areas and other work-related developments made of box-like buildings with large footprints. It contains many jobs of manual nature such as manufacturing or construction, and very little population live here compared to the rest of urban areas. Occasionally this type also covers areas of parks with large scale green open areas.',\n",
+       " 'Gridded residential quarters': '“Gridded residential quarters” are areas with street networks forming a well-connected grid-like (high density of 4-way intersections) pattern, resulting in places with smaller blocks and higher granularity. This signature is mostly residential but includes some services and jobs, and it tends to be located away from city centres.',\n",
+       " 'Connected residential neighbourhoods': '“Connected residential neighbourhoods” are relatively dense urban areas, both in terms of population and built-up area, that tend to be formed around well-connected street networks. They have access to services and some jobs but may be further away from city centres leading to higher dependency on cars and public transport for their residents.',\n",
+       " 'Dense residential neighbourhoods': 'A “dense residential neighbourhood” is an abundant signature often covering large parts of cities outside of their centres. It has primarily residential purpose and high population density, varied street network patterns, and some services and jobs but not in high intensity.',\n",
+       " 'Dense urban neighbourhoods': '“Dense urban neighbourhoods” are areas of inner-city with high population and built-up density of a predominantly residential nature but with direct access to jobs and services. This signature type tends to be relatively walkable and, in the case of some towns, may even form their centres.',\n",
+       " 'Local urbanity': '“Local urbanity” reflects town centres, outer parts of city centres or even district centres. In all cases, this signature is very much urban in essence, combining high population and built-up density, access to amenities and jobs. Yet, it is on the lower end of the hierarchy of signature types denoting urban centres with only a local significance.',\n",
+       " 'Regional urbanity': '“Regional urbanity” captures centres of mid-size cities with regional importance such as Liverpool, Plymouth or Newcastle upon Tyne. It is often encircled by “Local urbanity” signatures and can form outer rings of city centres in large cities. It features high population density, as well as a high number of jobs and amenities within walkable distance.',\n",
+       " 'Metropolitan urbanity': 'Signature type “Metropolitan urbanity” captures the centre of the largest cities in Great Britain such as Glasgow, Birmingham or Manchester. It is characterised by a very high number of jobs in the area, high built-up density and often high population density. This type serves as the core centre of the entire metropolitan areas.',\n",
+       " 'Concentrated urbanity': 'Concentrated urbanity” is a signature type found in the city centre of London and nowhere else in Great Britain. It reflects the uniqueness of London in the British context with an extremely high number of jobs and amenities located nearby, as well as high built-up and population densities. Buildings in this signature are large and tightly packed, forming complex shapes with courtyards and little green space.',\n",
+       " 'Hyper concentrated urbanity': 'The epitome of urbanity in the British context. “Hyper concentrated urbanity” is a signature type present only in the centre of London, around the Soho district, and covering Oxford and Regent streets. This signature is the result of centuries of urban primacy, with a multitude of historical layers interwoven, very high built-up and population density, and extreme abundance of amenities, services and jobs.'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "portraits"
    ]
   }
  ],
