--- a/esda/geog_distribution.ipynb
+++ b/esda/geog_distribution.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "identical-inclusion",
+   "metadata": {},
+   "source": [
+    "# Geographical distribution of signature types"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "silent-redhead",
+   "id": "designing-columbus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "excited-pizza",
+   "id": "virtual-sharp",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "realistic-detective",
+   "id": "preceding-martial",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "emerging-party",
+   "id": "architectural-sucking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ordered-walker",
+   "id": "taken-congo",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "elect-flush",
+   "id": "marine-designer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "killing-essay",
+   "id": "rising-construction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "eligible-promise",
+   "id": "welcome-convenience",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "adjusted-butter",
+   "id": "innocent-america",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "obvious-parts",
+   "id": "backed-mixture",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "religious-screen",
+   "id": "pressed-giving",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "heard-student",
+   "id": "thermal-african",
    "metadata": {},
    "outputs": [],
    "source": []
