--- a/esda/geog_distribution.ipynb
+++ b/esda/geog_distribution.ipynb
@@ -1014,12 +1014,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "826bc3bb-40aa-41e2-81fb-44653e144378",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Count of tessellation cells by type"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4750fee4-9150-4e6f-8450-9cde13424016",
+   "execution_count": 7,
+   "id": "32f887d9-14cc-4a14-b851-757871d28d3f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import geopandas\n",
+    "import dask_geopandas\n",
+    "import pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "81c86f21-813d-4092-94f3-713031b98a96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tess = dask_geopandas.read_parquet(f\"../../urbangrammar_samba/spatial_signatures/tessellation/tess_*.pq\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "df501593-a0fd-44d3-87f6-ff59ceb0c86c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels_l1 = pandas.read_parquet(\"../../urbangrammar_samba/spatial_signatures/clustering_data/KMeans10GB.pq\")\n",
+    "labels_l2_9 = pandas.read_parquet(\"../../urbangrammar_samba/spatial_signatures/clustering_data/clustergram_cl9_labels.pq\")\n",
+    "labels_l2_2 = pandas.read_parquet(\"../../urbangrammar_samba/spatial_signatures/clustering_data/subclustering_cluster2_k3.pq\")\n",
+    "labels = labels_l1.copy()\n",
+    "labels.loc[labels.kmeans10gb == 9, 'kmeans10gb'] = labels_l2_9['9'].values + 90\n",
+    "labels.loc[labels.kmeans10gb == 2, 'kmeans10gb'] = labels_l2_2['subclustering_cluster2_k3'].values + 20\n",
+    "\n",
+    "outliers = [98, 93, 96, 97]\n",
+    "mask = ~labels.kmeans10gb.isin(outliers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1086dead-a8d7-412f-a695-eb48c9a812f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels[mask][\"kmeans10gb\"].value_counts().to_csv(\"../../urbangrammar_samba/spatial_signatures/esda/counts.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c26e6704-6336-4166-bda4-f63bab9d87db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7     3686554\n",
+       "0     3022385\n",
+       "3     2561211\n",
+       "1     1962830\n",
+       "5      707211\n",
+       "4      595902\n",
+       "8      564318\n",
+       "20     502835\n",
+       "21     374090\n",
+       "22     238639\n",
+       "6      209959\n",
+       "90      86380\n",
+       "92      21760\n",
+       "94       3739\n",
+       "91       1390\n",
+       "95        264\n",
+       "Name: kmeans10gb, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels[mask][\"kmeans10gb\"].value_counts()"
+   ]
   }
  ],
  "metadata": {
