--- a/clusters/validation_GHS_BUILT_C_MSZ.ipynb
+++ b/clusters/validation_GHS_BUILT_C_MSZ.ipynb
@@ -58,19 +58,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9504818f-d800-4186-85ea-cfef3520d71f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "60297eae-8af0-450f-bf47-6e560c645c71",
    "metadata": {},
    "source": [
     "## Spatial Signatures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc5fd67f",
+   "metadata": {},
+   "source": [
+    "For simplicity, we use a simplified file that we have accessible internally:"
    ]
   },
   {
@@ -83,6 +83,14 @@
     "ss = geopandas.read_parquet(\n",
     "    'signatures_form_combined_levels_simplified.pq'\n",
     ").to_crs(ghsl.crs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "354c7f34",
+   "metadata": {},
+   "source": [
+    "The officially released file with all detail (and a larger footprint) is available from the Figshare repository [here](https://figshare.com/articles/dataset/Geographical_Characterisation_of_British_Urban_Form_and_Function_using_the_Spatial_Signatures_Framework/16691575/2?file=36049196)."
    ]
   },
   {
