--- a/data_product/vector_tile.ipynb
+++ b/data_product/vector_tile.ipynb
@@ -2,6 +2,8 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6e3c6a16",
+   "metadata": {},
    "source": [
     "# Generate vector tiles\n",
     "\n",
@@ -10,23 +12,26 @@
     "## Clip by coastline\n",
     "\n",
     "We first clip the signatures by the coastline of GB using the coastline layer we initially used to delimit enclosures."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "58b0b7f4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import geopandas as gpd\n",
     "from sqlalchemy import create_engine"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "ce50a1f2",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "user = os.environ.get('DB_USER')\n",
     "pwd = os.environ.get('DB_PWD')\n",
@@ -35,41 +40,38 @@
     "\n",
     "db_connection_url = f\"postgres+psycopg2://{user}:{pwd}@{host}:{port}/built_env\"\n",
     "engine = create_engine(db_connection_url)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "06e1f261",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sql = f'SELECT * FROM gb_coastline_2016'\n",
     "coastline = gpd.read_postgis(sql, engine, geom_col='geometry')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "3fcbc921",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from shapely.ops import polygonize\n",
     "\n",
     "polygons = polygonize(coastline.geometry)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "source": [
-    "polygons = gpd.GeoSeries([poly for poly in polygons], crs=coastline.crs)\n",
-    "polygons"
-   ],
+   "id": "5e9bdc19",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0       POLYGON ((85970.000 14510.000, 85940.000 14530...\n",
@@ -86,113 +88,117 @@
        "Length: 2399, dtype: geometry"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "polygons = gpd.GeoSeries([poly for poly in polygons], crs=coastline.crs)\n",
+    "polygons"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "9b3c78d6",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df = gpd.read_parquet(\"../../urbangrammar_samba/spatial_signatures/signatures/signatures_combined_levels_orig.pq\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "source": [
-    "%%time\n",
-    "clipped = gpd.clip(df, polygons)"
-   ],
+   "id": "918aa179",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "CPU times: user 26min 54s, sys: 465 ms, total: 26min 55s\n",
       "Wall time: 26min 55s\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "%%time\n",
+    "clipped = gpd.clip(df, polygons)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "fb3b28cd",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# clipped = clipped.explode()\n",
     "clipped = clipped.reset_index(drop=True)\n",
     "clipped_polys = clipped[clipped.geom_type==\"Polygon\"]"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "source": [
-    "clipped_polys.geom_type.value_counts()"
-   ],
+   "id": "28d6db8b",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "Polygon    96936\n",
        "dtype: int64"
       ]
      },
+     "execution_count": 28,
      "metadata": {},
-     "execution_count": 28
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "clipped_polys.geom_type.value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "53b3e496",
+   "metadata": {},
    "source": [
     "## Save to GeoJSON\n",
     "Clipped and cleaned signature geometry is now ready to be convereted to vector tiles. We use `tippecanoe` to do that. `tippecanoe` is a command-line toolkit that requires GeoJSON in lat/lon as an input."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "93831c6c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "clipped_polys.reset_index(drop=True)[[\"signature_type\", \"geometry\"]].to_crs(4326).to_file(\"../../urbangrammar_samba/spatial_signatures/signatures/signatures_combined_levels_clipped_4326.geojson\", driver=\"GeoJSON\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "3c6250a7",
+   "metadata": {},
    "source": [
     "## Generate tiles\n",
     "Finally, we run `tippecanoe` and create tiles."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "source": [
-    "! tippecanoe -z15 \\\n",
-    "             --no-tile-compression \\\n",
-    "             --output-to-directory=../../great-britain/tiles/ \\\n",
-    "             --drop-densest-as-needed \\\n",
-    "             --coalesce-smallest-as-needed --extend-zooms-if-still-dropping --detect-shared-borders --coalesce --reorder --hilbert \\\n",
-    "             --force \\\n",
-    "             ../../urbangrammar_samba/spatial_signatures/signatures/signatures_combined_levels_clipped_4326.geojson"
-   ],
+   "id": "cd28869e",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "For layer 0, using name \"signatures_combined_levels_clipped_4326\"\n",
       "96936 features, 168540234 bytes of geometry, 13651 bytes of separate metadata, 116 bytes of string pool\n",
@@ -248,12 +254,20 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "! tippecanoe -z15 \\\n",
+    "             --no-tile-compression \\\n",
+    "             --output-to-directory=../../great-britain/tiles/ \\\n",
+    "             --drop-densest-as-needed \\\n",
+    "             --coalesce-smallest-as-needed --extend-zooms-if-still-dropping --detect-shared-borders --coalesce --reorder --hilbert \\\n",
+    "             --force \\\n",
+    "             ../../urbangrammar_samba/spatial_signatures/signatures/signatures_combined_levels_clipped_4326.geojson"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -267,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
