--- a/esda/fua.ipynb
+++ b/esda/fua.ipynb
@@ -4792,6 +4792,11 @@
    "execution_count": 85,
    "id": "143063e3-a586-43e9-bd4c-d64059316693",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -5166,7 +5171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
