--- a/esda/sizeshape.ipynb
+++ b/esda/sizeshape.ipynb
@@ -3598,7 +3598,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3612,7 +3612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
